# uc.micro-py

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml  setup.py  tox.ini
.github/: dependabot.yml
.github/workflows/: github-ci.yml  pypi-test.yml
test/: test_uc_micro.py
uc_micro/: __init__.py
uc_micro/categories/Cf/: regex.py
uc_micro/categories/P/: regex.py
uc_micro/properties/Any/: regex.py
